sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var echange=true
	while (echange){
		for(i<-0 to getNombreValeurs()-2)
			if(plusPetit(i,i+1))
				val tmp=tab(i)
				tab(i)=tab(i+1)
				tab(i+1)=tmp
				echange=true
	}
}
